--- a/index.html
+++ b/index.html
@@ -4,42 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kisdews</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            color: #333;
-        }
-        header {
-            background: #2c3e50;
-            color: white;
-            padding: 1rem 0;
-            text-align: center;
-        }
-        nav {
-            display: flex;
-            justify-content: center;
-            background: #34495e;
-            padding: 0.5rem 0;
-        }
-        nav a {
-            color: white;
-            text-decoration: none;
-            padding: 0 1rem;
-        }
-        main {
-            padding: 2rem;
-            max-width: 800px;
-            margin: 0 auto;
-        }
-        footer {
-            text-align: center;
-            padding: 1rem 0;
-            background: #ecf0f1;
-        }
-    </style>
+    <link rel="stylesheet" href="./styles/main.css">
 </head>
 <body>
     <header>
@@ -56,11 +21,15 @@
         <section>
             <h2>你好！</h2>
             <p>这是我的个人网站，我会在这里分享我的项目和想法。</p>
+            <p id="days-counter-1">正在计算天数...</p>
+            <p id="days-counter-2">正在计算天数...</p>
         </section>
     </main>
     
     <footer>
         <p>&copy; Kisdews Games Page</p>
     </footer>
+
+    <script src="./scripts/main.js"></script>
 </body>
 </html>
